# HippoMind

./: .eslintrc.json  .gitignore  BUILD_GUIDE.md  COMMIT_CHANGES.md  CONTRIBUTING.md  DATABASE_MIGRATION_GUIDE.md  DOCUMENTATION_INDEX.md  EMAIL_SETUP_GUIDE.md  FIX_GITHUB_ACTIONS.md  FIX_GIT_PUSH.md  GITHUB_ACTIONS_FIXES_SUMMARY.md  GUMROAD_EMAIL_TEMPLATE.md  INTEGRATION.md  LANDING_SUMMARY.md  LICENSE  MONGODB_MIGRATION_GUIDE.md  PAYMENT_SYSTEM_DOCS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_RELEASE.md  QUICK_START.md  START_HERE.md  STATS.md  STRIPE_SETUP_GUIDE.md  SUMMARY.md  TRIAL_OPTIONS.md  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.github/workflows/: release.yml
assets/: README.md
docs/: developer-guide.md  file-format.md  keyboard-shortcuts.md  user-guide.md
e2e/: basic.spec.ts
landing/: .env.example  .welcome  COMMANDS.md  DOWNLOAD_SETUP.md  LANDING_GUIDE.md  PAYMENT_SETUP.md  QUICKSTART.md  README.md  TODO.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
landing/app/: globals.css
landing/components/: CopyButton.tsx  Demo.tsx  Downloads.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Pricing.tsx
landing/data/: licenses.json
landing/i18n/: request.ts
landing/lib/: db.ts  license.ts  mongodb.ts  stripe.ts
landing/messages/: en.json  fr.json
landing/scripts/: create-mongodb-indexes.ts  test-mongodb.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+7 files in other folders)
