[package]
name = "hippomind"
version = "1.0.0"
description = "Offline-first mind mapping application with local storage"
authors = ["HippoMind"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
sys-locale = "0.3"

[features]
default = []
